--- a/Crystal/Crystal.vcxproj.filters
+++ b/Crystal/Crystal.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Crystal\Events">
       <UniqueIdentifier>{8BE85F61-77B6-5367-604A-C48D4CB72FCC}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Crystal\ImGui">
+      <UniqueIdentifier>{F138BA12-5DF9-3549-2634-7FC692B37A25}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Crystal\Platform">
       <UniqueIdentifier>{BB3E1A55-A737-39A7-D069-1E2CBCC118B3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Crystal\Platform\OpenGL">
+      <UniqueIdentifier>{8FA7DBBB-FBDE-2353-04E9-8776709F4A4C}</UniqueIdentifier>
     </Filter>
     <Filter Include="Crystal\Platform\Windows">
       <UniqueIdentifier>{F5736C8F-E198-BB0F-0AE4-A09FF667BA2D}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Crystal\Events\MouseEvent.h">
       <Filter>Crystal\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Crystal\ImGui\ImGuiLayer.h">
+      <Filter>Crystal\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Crystal\Layer.h">
       <Filter>Crystal</Filter>
     </ClInclude>
@@ -46,17 +55,23 @@
     <ClInclude Include="src\Crystal\Log.h">
       <Filter>Crystal</Filter>
     </ClInclude>
-    <ClInclude Include="src\Crystal\Platform\Windows\WindowsWindow.h">
-      <Filter>Crystal\Platform\Windows</Filter>
-    </ClInclude>
     <ClInclude Include="src\Crystal\Window.h">
       <Filter>Crystal</Filter>
     </ClInclude>
     <ClInclude Include="src\crystalpch.h" />
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Crystal\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Crystal\Platform\Windows</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Crystal\Application.cpp">
       <Filter>Crystal</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Crystal\ImGui\ImGuiLayer.cpp">
+      <Filter>Crystal\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Crystal\Layer.cpp">
       <Filter>Crystal</Filter>
@@ -67,9 +82,12 @@
     <ClCompile Include="src\Crystal\Log.cpp">
       <Filter>Crystal</Filter>
     </ClCompile>
-    <ClCompile Include="src\Crystal\Platform\Windows\WindowsWindow.cpp">
+    <ClCompile Include="src\crystalpch.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Crystal\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Crystal\Platform\Windows</Filter>
     </ClCompile>
-    <ClCompile Include="src\crystalpch.cpp" />
   </ItemGroup>
 </Project>
