--- a/Crystal/Crystal.vcxproj.filters
+++ b/Crystal/Crystal.vcxproj.filters
@@ -10,14 +10,14 @@
     <Filter Include="Crystal\ImGui">
       <UniqueIdentifier>{F138BA12-5DF9-3549-2634-7FC692B37A25}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Crystal\Platform">
-      <UniqueIdentifier>{BB3E1A55-A737-39A7-D069-1E2CBCC118B3}</UniqueIdentifier>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Crystal\Platform\OpenGL">
-      <UniqueIdentifier>{8FA7DBBB-FBDE-2353-04E9-8776709F4A4C}</UniqueIdentifier>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Crystal\Platform\Windows">
-      <UniqueIdentifier>{F5736C8F-E198-BB0F-0AE4-A09FF667BA2D}</UniqueIdentifier>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -58,13 +58,13 @@
     <ClInclude Include="src\Crystal\Window.h">
       <Filter>Crystal</Filter>
     </ClInclude>
-    <ClInclude Include="src\crystalpch.h" />
     <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
-      <Filter>Crystal\Platform\OpenGL</Filter>
+      <Filter>Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
-      <Filter>Crystal\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClInclude>
+    <ClInclude Include="src\crystalpch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Crystal\Application.cpp">
@@ -82,12 +82,12 @@
     <ClCompile Include="src\Crystal\Log.cpp">
       <Filter>Crystal</Filter>
     </ClCompile>
-    <ClCompile Include="src\crystalpch.cpp" />
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
-      <Filter>Crystal\Platform\OpenGL</Filter>
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
-      <Filter>Crystal\Platform\Windows</Filter>
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
+    <ClCompile Include="src\crystalpch.cpp" />
   </ItemGroup>
 </Project>
