--- a/Crystal/Crystal.vcxproj
+++ b/Crystal/Crystal.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="src\Crystal\Log.h" />
     <ClInclude Include="src\Crystal\MouseButtonCodes.h" />
     <ClInclude Include="src\Crystal\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Crystal\Renderer\Shader.h" />
     <ClInclude Include="src\Crystal\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
@@ -577,6 +578,7 @@
     <ClCompile Include="src\Crystal\Layer.cpp" />
     <ClCompile Include="src\Crystal\LayerStack.cpp" />
     <ClCompile Include="src\Crystal\Log.cpp" />
+    <ClCompile Include="src\Crystal\Renderer\Shader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
