Preparing for 2D Rendering

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,17 @@
 [submodule "Crystal/vendor/spdlog"]
 	path = Crystal/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+	branch = v1.x
 [submodule "Crystal/vendor/GLFW"]
 	path = Crystal/vendor/GLFW
 	url = https://github.com/TheCherno/glfw
+	branch = master
 [submodule "Crystal/vendor/imgui"]
 	path = Crystal/vendor/imgui
 	url = https://github.com/TheCherno/imgui
+	branch = docking
 [submodule "Crystal\\vendor\\glm"]
 	path = Crystal\\vendor\\glm
 	url = https://github.com/g-truc/glm
+	branch = master
+	
