--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-#directies
-.vs/
-bin/
+# Binaries
+**/bin/
+!vendor/bin/premake/
 bin-int/
 
-#files
-*.user
+# Visual Studio files and forders
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
